CORE additional questions